--- a/requirements.txt
+++ b/requirements.txt
@@ -19,11 +19,11 @@ brotli-bin=1.0.9=h5eee18b_7
 brotlipy=0.7.0=py310h5764c6d_1004
 bzip2=1.0.8=h7b6447c_0
 c-ares=1.18.1=h7f98852_0
-ca-certificates=2022.6.15=ha878542_0
+ca-certificates=2022.07.19=h06a4308_0
 cached-property=1.5.2=hd8ed1ab_1
 cached_property=1.5.2=pyha770c72_1
 cachetools=5.2.0=pyhd8ed1ab_0
-certifi=2022.6.15=py310hff52083_0
+certifi=2022.6.15=py310h06a4308_0
 cffi=1.15.1=py310h74dc2b5_0
 charset-normalizer=2.1.0=pyhd8ed1ab_0
 click=8.1.3=py310hff52083_0
@@ -33,6 +33,7 @@ daal4py=2021.4.0=py310h00b725a_0
 dal=2021.4.0=h06a4308_729
 dbus=1.13.18=hb2f20db_0
 expat=2.4.4=h295c915_0
+flask=2.1.3=py310h06a4308_0
 flatbuffers=2.0.6=h27087fc_0
 fontconfig=2.13.1=h6c09931_0
 fonttools=4.25.0=pyhd3eb1b0_0
@@ -54,6 +55,8 @@ icu=58.2=he6710b0_3
 idna=3.3=pyhd8ed1ab_0
 importlib-metadata=4.11.4=py310hff52083_0
 intel-openmp=2021.4.0=h06a4308_3561
+itsdangerous=2.0.1=pyhd3eb1b0_0
+jinja2=3.0.3=pyhd3eb1b0_0
 joblib=1.1.0=pyhd3eb1b0_0
 jpeg=9e=h7f8727e_0
 keras=2.8.0=py310h06a4308_0
